Updated 'couic2018/_includes/footer.html' via CloudCannon

--- a/couic2018/_includes/footer.html
+++ b/couic2018/_includes/footer.html
@@ -26,13 +26,13 @@
 	  <p>Nous suivre sur : </p>
 	  <a target="_blank" href="http://welfarm.fr">welfarm.fr</a>
 	  <a target="_blank" href="https://www.facebook.com/Welfarm-Protection-mondiale-des-animaux-de-ferme-174152456808/">
-	    <img src="/img/fb.png" alt="Facebook">
+	    <img src="/couic2018/img/fb.png" alt="Facebook">
 	  </a>
 	  <a target="_blank" href="https://twitter.com/WelfarmFR">
-	    <img src="/img/twitter.png" alt="Twitter">
+	    <img src="/couic2018/img/twitter.png" alt="Twitter">
 	  </a>
 	  <a target="_blank" href="https://www.youtube.com/channel/UCiJAjlUSl1cGrQzkDPsw7ng">
-	    <img src="/img/youtube.png" alt="YouTube">
+	    <img src="/couic2018/img/youtube.png" alt="YouTube">
 	  </a>
 	</div>
       </div>
@@ -45,7 +45,7 @@
     <div class="row medium-collapse don-en-confiance">
       <div class="small-10 small-centered columns">
 	<div class="medium-2 columns">
-	  <img src="/img/don-en-confiance.png" alt="Don en Confiance²">
+	  <img src="/couic2018/img/don-en-confiance.png" alt="Don en Confiance²">
 	</div>
 	<div class="medium-10 columns">
 	  <p>WELFARM est agrée par le Comité de la Charte du don en confiance, organisme sans but lucratif exerçant depuis plus de 20 ans la mission de contrôle de l'appel à la générosité publique.</p>
