Updated 'couic2018/_layouts/default.html' via CloudCannon

--- a/couic2018/_layouts/default.html
+++ b/couic2018/_layouts/default.html
@@ -5,9 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link href='js/tel-input/build/css/intlTelInput.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="couic2018/css/foundation.css">
+    <link rel="stylesheet" href="couic2018/css/app.css">
+    <link href='couic2018/js/tel-input/build/css/intlTelInput.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:700,400' rel='stylesheet' type='text/css'>
     <!-- Nimbus Sans (Helvetica equivalent) -->
     <script src="https://use.typekit.net/mjn4vus.js"></script>
@@ -22,16 +22,16 @@
   <body onload="init();" style="background-color:#D4D4D4;margin:0px;">
     {{ content }}
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/vendor/equalize.js"></script>
-    <script src="js/tel-input/build/js/intlTelInput.js"></script>
+    <script src="couic2018/js/vendor/jquery.js"></script>
+    <script src="couic2018/js/vendor/what-input.js"></script>
+    <script src="couic2018/js/vendor/foundation.js"></script>
+    <script src="couic2018/js/vendor/equalize.js"></script>
+    <script src="couic2018/js/tel-input/build/js/intlTelInput.js"></script>
     <!-- Animation code -->
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-    <script src="js/animation.js"></script>
-    <script src="js/cochon-v3.js"></script>
-    <script src="js/jquery.viewport.mini.js"></script>
+    <script src="couic2018/js/animation.js"></script>
+    <script src="couic2018/js/cochon-v3.js"></script>
+    <script src="couic2018/js/jquery.viewport.mini.js"></script>
     <script>
 var canvas, stage, exportRoot;
 function init() {
@@ -48,6 +48,6 @@ function init() {
 	createjs.Ticker.addEventListener("tick", stage);
       }
     </script>
-    <script src="js/app.js"></script>
+    <script src="couic2018/js/app.js"></script>
   </body>
 </html>
