--- a/couic2018/css/app.scss
+++ b/couic2018/css/app.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import '/couic2018/_sass/global';
+@import '/couic2018/_sass/global.scss';
 
 /* Fix from Foundation Essential to Foundation Complete */
 .button-group .button {
