Updated 'couic2018/css/app.scss' via CloudCannon

--- a/couic2018/css/app.scss
+++ b/couic2018/css/app.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import '_sass/global.scss';
+@import '_sass/couic.scss';
 
 /* Fix from Foundation Essential to Foundation Complete */
 .button-group .button {
