--- a/_layouts/viededinde.html
+++ b/_layouts/viededinde.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url"           content="{{ site.url }}" />
+    <meta property="og:url"           content="{{ page.url }}" />
     <meta property="og:title"         content="{{ page.og-title }}" />
     <meta property="og:description"   content="{{ page.og-description }}" />
     <meta property="og:image"         content="{{ site.url }}{{ page.og-image }}" />
