--- a/_layouts/couic.html
+++ b/_layouts/couic.html
@@ -5,9 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/couic2018/css/foundation.css">
-    <link rel="stylesheet" href="/couic2018/css/app.css">
-    <link href='/couic2018/js/tel-input/build/css/intlTelInput.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ site.url }}/couic2018/css/foundation.css">
+    <link rel="stylesheet" href="{{ site.url }}/couic2018/css/app.css">
+    <link href='js/tel-input/build/css/intlTelInput.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:700,400' rel='stylesheet' type='text/css'>
     <!-- Nimbus Sans (Helvetica equivalent) -->
     <script src="https://use.typekit.net/mjn4vus.js"></script>
@@ -22,7 +22,7 @@
   <body onload="init();" style="background-color:#D4D4D4;margin:0px;">
     {{ content }}
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-    <script src="/couic2018/js/vendor/jquery.js"></script>
+    <script src="{{ site.url }}/couic2018/js/vendor/jquery.js"></script>
     <script src="/couic2018/js/vendor/what-input.js"></script>
     <script src="/couic2018/js/vendor/foundation.js"></script>
     <script src="/couic2018/js/vendor/equalize.js"></script>
