--- a/_layouts/couic.html
+++ b/_layouts/couic.html
@@ -16,7 +16,7 @@
     <meta property="og:type"          content="Coupons court à la castration des porcelets" />
     <meta property="og:title"         content="#COUIC2018" />
     <meta property="og:description"   content="En France, 85% des porcelets mâles sont castrés sans anesthésie. Mettons fin à cette mutilation ! RDV sur www.couic2018.fr pour voir la vidéo et signer la pétition de WELFARM." />
-    <meta property="og:image"         content="{{ site.url }}/img/share.png" />
+    <meta property="og:image"         content="{{ site.url }}{{ page.url }}/img/share.png" />
     <meta name="google-site-verification" content="sYsZuLgkTJeoMXJ3EO0eCpC0mbugNfq04Urfyc7rPyU" />
   </head>
   <body onload="init();" style="background-color:#D4D4D4;margin:0px;">
