--- a/inscription/assets/css/app.css
+++ b/inscription/assets/css/app.css
@@ -175,6 +175,7 @@ input[type=radio]:checked + label:before {
 }
 
 #f_summit {
+	display: block;
 	padding: 15px;
 	background-color: #97bf0d;
 	font-family: 'Open Sans';
