--- a/inscription/assets/css/app.css
+++ b/inscription/assets/css/app.css
@@ -201,7 +201,7 @@ input[type=radio]:checked + label:before {
 	top: 0;
 	padding: 10px;
 	text-align: center;
-	background-color: #e09ba3;
+	background-color: #97bf0d;
 	display: none;
 
 }
