Updated 'inscription/assets/css/app.css' via CloudCannon

--- a/inscription/assets/css/app.css
+++ b/inscription/assets/css/app.css
@@ -42,7 +42,7 @@ input[type="number"] {
 .header .row h5 {
     font-weight: bold;
 	margin-top: 40px;
-	margin-right: 48px;ra
+	margin-right: 48px;
 	color: #97c148;
 }
 
