Updated 'inscription/assets/css/app.css' via CloudCannon

--- a/inscription/assets/css/app.css
+++ b/inscription/assets/css/app.css
@@ -41,7 +41,7 @@ input[type="number"] {
 }
 .header .row h5 {
     font-weight: bold;
-	margin-top: 2.6em;
+	margin-top: 48px;
 	margin-right: 48px;
 	color: #97c148;
 }
