Updated '_includes/couic-footer.html' via CloudCannon

--- a/_includes/couic-footer.html
+++ b/_includes/couic-footer.html
@@ -2,9 +2,10 @@
   <div class="part-1">
     <div class="row">
       <div class="large-10 columns large-centered">
-	<h2>Pour aller plus loin :</h2>
+	<h2>Je consomme différement :</h2>
 	<p>
-	Malheureusement la castration à vif n’est la seule source de souffrance des porcs destinés à la consommation. Actuellement 90% des cochons vivent dans des conditions qui ne répondent pas à leurs besoins.
+        Privilégiez les élevages respectueux du bien-être animal dans vos achats en diminuant votre consommation de produits d’origine animale et en privilégiant les mentions « plein air », « sur paille » label rouge fermier ou bio.
+
 	</p>
 	<p>
 	Plus d’infos sur <a target="_blank" href="http://paillassonlecochon.com">paillassonlecochon.com</a>
