--- a/couic2018/css/app.css
+++ b/couic2018/css/app.css
@@ -38,6 +38,10 @@
 .button-group .button {
   margin: 0 0 1rem 0; }
 
+ .button-group {
+    margin-top: 20px;
+  }
+
 body {
   font-family: "nimbus-sans", sans-serif; }
 
@@ -118,13 +122,15 @@ input[type='checkbox'] {
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
-  padding-top: 20px; }
+  padding-top: 10px; 
+  padding-bottom: 12px;}
   .fleche p {
     display: inline-block;
     font-weight: bold;
     font-size: 30px;
     padding-left: 20px;
-    padding-right: 20px; }
+    padding-right: 20px; 
+    padding-top: 10px;}
 
 .number {
   margin: 0 auto;
@@ -255,15 +261,10 @@ input[type='checkbox'] {
         display: inline-block; } }
   .grey .grey-1 {
     /* Medium-up */ }
-    @media only screen and (min-width: 40em) {
-      .grey .grey-1 {
-        padding-bottom: 80px; } }
     .grey .grey-1 .part-1 {
-      font-size: 26px;
-      font-weight: bold; }
-      @media only screen and (max-width: 39.9375em) {
-        .grey .grey-1 .part-1 {
-          text-align: center; } }
+      font-size: 23px;
+      font-weight: bold; 
+      text-align: center; }
     .grey .grey-1 .part-3 {
       font-size: 24px;
       /* Small-only */ }
@@ -276,27 +277,81 @@ input[type='checkbox'] {
           .grey .grey-1 .part-3 img {
             margin-bottom: 20px;
             margin-top: 20px; } }
-  .grey .grey-2 {
-    text-align: center;
-    /* Où, Qui, Pourquoi */
-    /* Images */ }
-    .grey .grey-2 h4 {
+            .grey-1 .part-1 h3 {
+              font-weight: bold;
+              padding: 10px;
+              font-size: 20px;
+              line-height: 24px;
+            }
+    .row-info {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+    .info .delimiter {
+      margin-top: 5px !important;
+    }
+    .grey .info h3 {
+      text-align:center;
       color: #f19402;
-      font-weight: bold;
+      font-family: "Young-Frankenstein-Rotalic";}
+    .grey .info h4 {
+      color: #f19402;
+      font-weight: 500;
       text-transform: uppercase;
-      margin-left: 10px; }
+      }
+    .grey .info .img {
+      text-align: center;
+      }
+    .img > img:nth:child(2)
+    {
+      margin-top: 100px !important;
+    }
+    .grey .info img {
+      max-height: 70px;
+      max-width: 100px;
+      margin-top: 80px;
+    }
+    @media only screen and (max-width: 837px) and (min-width: 640px) {
+      .grey .info img {
+        max-height: 70px;
+        max-width: 80px;
+        margin-top: 120px;
+      }
+      .titreInfo {
+        margin-top: 45px;
+      }
+    }
+     .grey .ou h3{
+        font-size: 30px !important;
+      }
+    @media only screen and (max-width: 425px) {
+    .grey .ou h3{
+        font-size: 26px !important;
+      }
+    }
+    .grey .ou {
+      margin-top: 30px;
+    }
+    .grey .box {
+      max-width: 300px;
+    }
+    .grey .box h4 {
+      font-weight: bold;
+      font-size: 24px;
+    }
     .grey .grey-2 .first, .grey .grey-2 .second {
       margin-top: 10px; }
-    .grey .grey-2 p {
+    .grey .info p {
       font-size: 20px;
-      margin-top: 30px;
-      line-height: 1.3; }
+      margin-top: 0px;
+      line-height: 1.3; 
+      font-weight: 500}
     .grey .grey-2 .ou p {
       padding-right: 25px;
-      padding-left: 25px; }
+      }
     .grey .grey-2 .pourquoi p {
       padding-right: 50px;
-      padding-left: 70px; }
+      }
   .grey .grey-3 {
     /*border-top: 1px solid $orange;*/
     /*margin-top: 40px;*/
@@ -311,88 +366,68 @@ input[type='checkbox'] {
   text-align: center;
   padding-top: 40px;
   padding-bottom: 50px; }
-  @media only screen and (max-width: 39.9375em) {
-    .green {
-      background-color: #ffffff;
-      padding-top: 0px; }
-      .green .arrow.arrow-green {
-        display: none; }
-      .green .part-1 {
-        background-color: #97bf0d; }
-      .green .part-1 {
-        padding-top: 40px; }
-      .green .part-2 {
-        position: relative; } }
-  .green .part-1 h2 {
-    font-size: 30px;
-    text-transform: uppercase; }
-  .green .part-1 p {
-    font-size: 24px; }
-  .green .part-2 .no-hide-for-medium {
-    display: block !important; }
-  .green .part-2 .block {
-    background-color: #ffffff;
-    /* Used to align the arrow */
-    position: relative;
-    box-shadow: 0px 0px 10px #707070;
-    color: #000000;
-    padding-top: 35px;
-    padding-bottom: 10px;
-    padding-right: 30px;
-    padding-left: 30px;
-    /* Used to avoid the arrow to overlap the block in mobile */
-    margin-top: 40px; }
-    @media only screen and (max-width: 40em) {
-      .green .part-2 .block {
-        box-shadow: none;
-        height: auto !important; } }
-    .green .part-2 .block.last {
-      padding-left: 20px;
-      padding-right: 20px; }
-    @media only screen and (max-width: 40em) {
-      .green .part-2 .block {
-        margin-top: 0px; } }
-    .green .part-2 .block h4 {
-      color: #97bf0d;
-      text-transform: uppercase; }
-    .green .part-2 .block .button {
-      cursor: initial;
-      text-transform: uppercase;
-      background-color: #f19402;
-      min-width: 177px;
-      font-size: 18px;
-      padding-top: 10px;
-      padding-bottom: 10px; }
-    .green .part-2 .block img {
-      display: block;
-      margin: 0 auto;
-      margin-bottom: 20px; }
-    .green .part-2 .block p {
-      line-height: 1.2;
-      font-size: 14px; }
-    .green .part-2 .block .row {
-      margin-left: 0;
-      margin-right: 0; }
-  .green .part-2 > *:nth-child(2) .block h4 {
-    margin-top: 10px;
-    margin-bottom: 30px; }
-  .green .part-2 > *:nth-child(3) .block h4 {
-    margin-top: 10px;
-    margin-bottom: 30px; }
-  .green .part-2 > *:nth-child(3) .block .first {
-    font-size: 22px; }
-  .green .part-2 > *:nth-child(3) .block p {
+  .green .container {
+    max-width: 350px;
+    display: inline-block;
+  }
+ .green .titre h3,p {
+  margin-bottom: 0px;
+  line-height: 20px;
+  font-size: 19px;
+ }
+ .green .titre h3 {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 24px;
+  line-height: 24px;
+  padding: 3px;
+  margin-bottom: 5px;
+ }
+ .green .stop {
+  max-height: 60px;
+ }
+ .green .info {
+  margin-top: 30px;
+ }
+ .green .info ul {
+    list-style-image: url('/couic2018/img/arrow-bullet.png');
     text-align: left;
-    font-size: 16px; }
-  .green .part-2 > *:nth-child(3) .block img {
-    margin: 0 auto; }
-  .green .part-2 > *:nth-child(3) .block.last img:not(.green-3-1) {
-    max-width: 45px; }
-  .green .part-2 > *:nth-child(3) .block .row:not(:last-child) {
-    margin-bottom: 10px; }
-  .green .part-2 > *:nth-child(3) .block .row:last-child p {
-    margin-top: 10px; }
-
+ }
+ .green .info li {
+  font-size: 18px;
+  padding-left: 5px;
+ }
+ .green .container {
+  padding-left: 30px;
+ }
+  .green .restrict {
+  padding-left: 40px;
+  padding-right: 40px;
+ }
+ .green .restrict p{
+  margin-top: 25px;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 22px;
+ }
+ .green .container img{
+    margin-top: 22px;
+    max-width: 150px;
+ }
+.green .container h4{
+  margin-top: 22px;
+  margin-bottom: 22px;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 20px;
+}
+.green .container li {
+  line-height: 20px;
+  margin-bottom: 8px;
+}
+.green .container li > span {
+  font-weight: bold;
+}
 .agis {
   background-color: #f19402; }
 
