--- a/couic2018/css/app.css
+++ b/couic2018/css/app.css
@@ -370,7 +370,7 @@ input[type='checkbox'] {
     max-width: 350px;
     display: inline-block;
   }
- .green .titre h3,p {
+ .green .titre h3, .green .titre p {
   margin-bottom: 0px;
   line-height: 20px;
   font-size: 19px;
