--- a/couic2018/css/app.css
+++ b/couic2018/css/app.css
@@ -293,7 +293,9 @@ input[type='checkbox'] {
     .grey .info h3 {
       text-align:center;
       color: #f19402;
-      font-family: "Young-Frankenstein-Rotalic";}
+      font-family: "Young-Frankenstein-Rotalic";
+        font-size: 50px;
+    }
     .grey .info h4 {
       color: #f19402;
       font-weight: 500;
