--- a/couic2018/css/app.css
+++ b/couic2018/css/app.css
@@ -324,11 +324,11 @@ input[type='checkbox'] {
       }
     }
      .grey .ou h3{
-        font-size: 30px !important;
+        font-size: 30px;
       }
     @media only screen and (max-width: 425px) {
     .grey .ou h3{
-        font-size: 26px !important;
+        font-size: 26px;
       }
     }
     .grey .ou {
