Updated 'couic2018/css/app.css' via CloudCannon

--- a/couic2018/css/app.css
+++ b/couic2018/css/app.css
@@ -328,7 +328,7 @@ input[type='checkbox'] {
       }
     @media only screen and (max-width: 425px) {
     .grey .info h3 {
-        font-size: 34px;
+        font-size: 34px !important;
     }
     .grey .ou h3{
         font-size: 26px;
