Updated 'challenge/css/app.css' via CloudCannon

--- a/challenge/css/app.css
+++ b/challenge/css/app.css
@@ -399,4 +399,9 @@ header
 		font-size: 20px;
 	}
 
+	#professionnels #column-pro
+	{
+		width: 73% !important;
+		padding: 0 100px !important;
+	}
 }
