--- a/challenge/css/app.css
+++ b/challenge/css/app.css
@@ -44,6 +44,7 @@ span#nbVote {
 #formContainer {
 	position: static;
 	width: 360px;
+	max-width: 100%;
 	display: inline-block;
 }
 
@@ -273,16 +274,16 @@ header
 
 /* Fix iphone 5 */
 @media only screen and (max-width: 321px) {
-	#formContainer {
+	/*#formContainer {
 		width: 290px;
-	}
+	}*/
 }
 
 /* Small only */
 @media only screen and (max-width: 39.9375em) {
-	#formContainer {
+	/*#formContainer {
 		width: 100%;
-	}
+	}*/
 }
 
 /* Medium only */
