Updated '_includes/couic-professionels.html' via CloudCannon

--- a/_includes/couic-professionels.html
+++ b/_includes/couic-professionels.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     	<p class="text-1">
-	    A ce jour, certaines marques ont refusé de nous recevoir : MADRANGE, AOSTE, RAFFIN, JAMBON DE BAYONNE<br />
+	    A ce jour, certaines marques ont refusé de nous recevoir : AOSTE, RAFFIN, JAMBON DE BAYONNE<br />
         <span style="font-weight: bold">ECRIVEZ LEUR POUR LES FAIRE CHANGER D’AVIS</span>
 	</p>
   </div>
@@ -76,7 +76,15 @@
     </div>
     <div class="row">
 	    <div class="small-12 large-6 columns">
-	    <a class="button marque " target="_blank" href="mailto:consommateurs@madrange.com">Madrange</a></div>
+	    <a class="button marque " target="_blank" href="http://www.terresdebreizh.bzh/contact/">Terres de Breizh</a></div>
+	    <div class="small-12 large-6 columns">
+	    <a class="button marque " target="_blank" href="https://www.biocoop.fr/Formulaire-Contact-Consommateurs">Biocoop</a></div>
+	    <div class="small-12 large-6 columns">
+	    <a class="button marque " target="_blank" href="http://www.lavieclaire.com/contact.html">La Vie Claire</a></div>
+	    <div class="small-12 large-6 columns">
+	    <a class="button marque " target="_blank" href="https://www.biomonde.fr/nous-contacter,1,61,1">Biomonde</a></div>
+	    <div class="small-12 large-6 columns">
+	    <a class="button marque " target="_blank" href="http://www.demeter.fr/contact/">Demeter</a></div>
 	    <div class="small-12 large-6 columns">
 	    <a class="button marque " target="_blank" href="http://www.groupeaoste.com/scs/Satellite?c=Page&cid=1374097616246&pagename=AO%2FPage%2FAO_Contacto2">Aoste</a></div>
 	    <div class="small-12 large-6 columns">
