Updated '_includes/couic-professionels.html' via CloudCannon

--- a/_includes/couic-professionels.html
+++ b/_includes/couic-professionels.html
@@ -60,7 +60,7 @@
 	</div>
 	<div class="medium-8 small-7 columns end">
 	  <p class="legende-number-petition">
-	  Choisissez la marque en cliquant sur son bouton
+	  Choisissez la marque ou certification en cliquant sur son bouton
 	  </p>
 	</div>
       </div>
@@ -84,7 +84,7 @@
 	    <div class="small-12 large-6 columns">
 	    <a class="button marque " target="_blank" href="https://www.biomonde.fr/nous-contacter,1,61,1">Biomonde</a></div>
 	    <div class="small-12 large-6 columns">
-	    <a class="button marque " target="_blank" href="http://www.demeter.fr/contact/">Demeter</a></div>
+	    <a class="button marque " target="_blank" href="http://www.demeter.fr/contact/">Demeter*</a></div>
 	    <div class="small-12 large-6 columns">
 	    <a class="button marque " target="_blank" href="http://www.groupeaoste.com/scs/Satellite?c=Page&cid=1374097616246&pagename=AO%2FPage%2FAO_Contacto2">Aoste</a></div>
 	    <div class="small-12 large-6 columns">
