--- a/_includes/couic-professionels.html
+++ b/_includes/couic-professionels.html
@@ -87,7 +87,7 @@
 	    <a class="button marque " target="_blank" href="http://www.groupeaoste.com/scs/Satellite?c=Page&cid=1374097616246&pagename=AO%2FPage%2FAO_Contacto2">Aoste</a></div>
 	    <div class="small-12 large-6 columns">
 	    <a class="button marque " target="_blank" href="mailto:henriraffin@raffin.com">Raffin</a></div>
-	    <div class="small-12 large-6 columns end">
+	    <div class="small-12 large-12 columns">
 	    <a class="button marque" target="_blank" href="mailto:boutique@jambon-de-bayonne.com">Jambon de Bayonne</a></div>
     </div>
   <div class="part-4">
