--- a/campagne/assets/css/app.css
+++ b/campagne/assets/css/app.css
@@ -120,6 +120,7 @@
 	font-family: 'oswaldregular', Arial, serif;
 	font-size: 35px;
 	margin-top: 75px;
+	font-weight: bold;
 }
 
 div#eq .priceCard .border-bottom {
