--- a/_includes/couic-professionels.html
+++ b/_includes/couic-professionels.html
@@ -84,7 +84,7 @@
 	    <a class="button marque " target="_blank" href="https://www.biomonde.fr/nous-contacter,1,61,1">Biomonde</a></div>
 	    <div class="small-12 large-6 columns">
 	    <a class="button marque " target="_blank" href="http://www.groupeaoste.com/scs/Satellite?c=Page&cid=1374097616246&pagename=AO%2FPage%2FAO_Contacto2">Aoste</a></div>
-	    <div class="small-12 large-6 columns">
+	    <div class="small-12 large-6 columns end">
 	    <a class="button marque " target="_blank" href="mailto:henriraffin@raffin.com">Raffin</a></div>
     </div>
   <div class="part-4">
