--- a/fermesasang/assets/css/app.css
+++ b/fermesasang/assets/css/app.css
@@ -60,8 +60,14 @@
 	z-index: 1;
 }
 .header {
+	background-color: white;
 	height: 100px;
 	padding: 15px;
+	position: fixed;
+	top: 0;
+	left : 0;
+	width: 100%;
+	z-index: 999;
 }
 .header img {
 	max-height: 100%;
@@ -73,7 +79,7 @@
 
 .accroche {
 	background-color: black;
-	padding: 50px 10px;
+	padding: 150px 10px 50px;
 	position: relative;
 }
 .accroche .youtube p {
@@ -89,8 +95,24 @@
 	margin-right: 8px;
 	margin-left: 8px;
 }
+#video-container {
+	display: none;
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+}
 
-
+#video-container iframe,
+#video-container object,
+#video-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
 .picto-container {
 	background-image: url("https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/bg-picto.jpg");
@@ -200,7 +222,7 @@
 	margin-right: 10px;
 }
 .rs-container .share .compte {
-	text-align: right;
+	text-align: center;
 }
 
 .footer {
