--- a/fermesasang/assets/css/app.css
+++ b/fermesasang/assets/css/app.css
@@ -32,7 +32,9 @@
 	color: #0f0 !important;
 	outline: solid #f00 1px !important;
 	}*/
-
+.bold {
+	font-weight: bold;
+}
 .max-width {
 	max-width: 75rem !important;
 	margin: 0 auto;
@@ -50,7 +52,9 @@
 .orange {
 	color: #f19425;
 }
-
+.relative {
+	position: relative;
+}
 .transition {
 	position: absolute;
 	left: 0;
@@ -58,6 +62,23 @@
 	margin: 0 auto;
 	bottom: -33px;
 	z-index: 1;
+}
+.remodal {
+	max-width: 95% !important;
+}
+#close,
+#close:before {
+	left: auto !important;
+	right: 0 !important;
+	font-size: 40px !important;
+	color: #ed0600 !important;
+}
+.petition p {
+	font-family: 'Poppins', serif;
+	font-size: 15px;
+}
+header {
+	position: relative;
 }
 .header {
 	background-color: white;
@@ -75,7 +96,63 @@
 .header .rs-img {
 	margin-left: 10px;
 }
-
+.scoring {
+	position: fixed;
+	top: 100px;
+	left: 0;
+	z-index: 999;
+	width: 100%;
+	max-width: none;
+	background-color: #f29400;
+	padding: 15px 5px;
+	display: none;
+}
+.scoring .text p {
+	font-family: "Poppins", serif;
+	font-size: 25px;
+	color: #2c2925;
+	line-height: 1.2;
+	margin-bottom: 0;
+	margin-top: 10px;
+}
+.scoring p.precision {
+	font-family: "Poppins", serif;
+	font-size: 16px;
+	color: #2c2925;
+	line-height: 1.2;
+}
+.scoring .score a {
+	font-family: "Poppins", serif;
+	font-size: 24px;
+	color: #2c2925;
+	border: 1px solid #2c2925;
+	border-radius: 50%;
+	padding: 7px 13px;
+}
+.scoring .score a:hover,
+.scoring .score a:focus{
+	background-color: #2c2925;
+	color: white;
+}
+.scoring .score a.small {
+	padding: 7px 16px;
+}
+.scoring .score a.big {
+	padding: 7px 9px;
+}
+.scoring .score p {
+	display: inline-block;
+	font-family: "Poppins", serif;
+	font-size: 20px;
+	color: #2c2925;
+	line-height: 1.2;
+}
+.scoring .score p:nth-child(1) {
+	margin-right: 10px;
+}
+.scoring .score p:nth-child(12) {
+	margin-left: 10px;
+}
 
 .accroche {
 	background-color: black;
@@ -241,6 +318,62 @@ form label {
 .checkbox-round:checked {
 	background-color: red;
 }
+.second-screen {
+	display: none;
+}
+.second-screen .container-title p {
+	font-family: 'Poppins Medium', serif;
+	color: white;
+	line-height: 1.2;
+	font-size: 16px;
+	margin-top: 40px;
+}
+
+.second-screen .container-don .box-don {
+	margin-top: 50px;
+	position: relative;
+	height: 390px;
+}
+.second-screen .container-don .box-don img {
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	bottom: 10px;
+}
+.second-screen .container-don .box-don .number p {
+	font-size: 104px;
+	font-family: 'Umbrage', serif;
+	color: white;
+	line-height: 1.2;
+	display: inline-block;
+}
+.second-screen .container-don .box-don .number p.euro {
+	font-size: 45px;
+	font-family: 'Umbrage', serif;
+	color: white;
+	line-height: 1.2;
+	display: inline-block;
+	vertical-align: top;
+}
+.second-screen .container-don .box-don .other p {
+	font-size: 16px;
+	font-family: 'Poppins', serif;
+	color: white;
+	line-height: 1.2;
+}
+.second-screen .container-don .box-don .other.margin {
+	margin-top: 20px;
+}
+.second-screen .container-don .box-don .other p.deduction span {
+	font-size: 48px;
+	font-family: 'Umbrage', serif;
+	color: white;
+	line-height: 1.2;
+}
+.second-screen .container-don .box-don .other p.deduction span.euro {
+	font-size: 26px !important;
+}
 
 .picto-container {
 	background-image: url("https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/bg-picto.jpg");
@@ -359,7 +492,8 @@ form label {
 footer .dec {
 	padding-top: 105px;
 }
-footer .text p {
+footer .text p,
+footer .text a{
 	font-family: 'Poppins', serif;
 	color: black;
 	line-height: 1.2;
@@ -459,5 +593,30 @@ footer .rs-footer p {
 	form input,
 	form select {
 		width: 100% !important;
+	}
+
+	.scoring {
+		top: 110px;
+	}
+	.scoring .text p {
+		font-size: 16px;
+	}
+	.scoring p.precision {
+		margin-top: 10px;
+		font-size: 12px;
+	}
+	.scoring .score p {
+		display: none;
+		font-size: 12px;
+	}
+	.scoring .score a {
+		font-size: 13px;
+		padding: 4px 7px;
+	}
+	.scoring .score a.small {
+		padding: 4px 9px;
+	}
+	.scoring .score a.big {
+		padding: 4px 6px;
 	}
 }
