--- a/fermesasang/assets/css/app.css
+++ b/fermesasang/assets/css/app.css
@@ -582,6 +582,9 @@ footer .rs-footer p {
 		max-width: 40px;
 		margin-left: 5px;
 	}
+	.accroche {
+		padding-top: 150px;
+	}
 	.accroche .youtube .cta img {
 		margin-top: 10px;
 	}
