--- a/questionnaire/assets/css/app.css
+++ b/questionnaire/assets/css/app.css
@@ -42,13 +42,13 @@
 .title {
 	text-align: center;
 	padding: 55px 10px 55px;
-	font-family: 'Umbrage', serif;
+	font-family: 'Umbrage', serif !important;
 	background-image: url("https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/bg-title.png");
 	line-height: 1;
 	font-weight: bold;
 	text-transform: uppercase;
 	color: white;
-	font-size: 30px;
+	font-size: 30px !important;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -310,9 +310,8 @@ form ::-ms-input-placeholder { /* Microsoft Edge */
 	font-size: 20px;
 	color: white;
 	font-family: "Poppins Medium", serif;
-	margin-bottom: 4%;
+	margin-bottom: 2%;
 }
-
 #questionnaire .container-answer p {
 	display: inline-block;
 	font-size: 20px;
@@ -332,24 +331,86 @@ form ::-ms-input-placeholder { /* Microsoft Edge */
 	border: 2px solid white;
 	border-radius: 50%;
 	padding: 9px 14px;
-	margin: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 20px;
 }
 #questionnaire .container-answer a.small {
 	padding: 9px 17px;
-}
-#questionnaire .container-answer a:hover,
-#questionnaire .container-answer a:focus {
-	background-color: #96c11f;
-	border: 2px solid #96c11f;
 }
 
 
 
 #merci {
 	background-image: url("https://s3.amazonaws.com/heroku-adfinitas-campaign/Welfarm-Ferme-a-sang/bg-merci.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	color: white;
+	padding: 40px 10px 80px;
+	display: none;
 }
-
-
+#merci .container-title .title {
+	margin-bottom: 30px;
+}
+#merci .container-title p {
+	font-family: "Poppins Medium", serif;
+	font-size: 18px;
+	text-align: center;
+}
+#merci .container-don {
+	background-color: #96c11f;
+	text-align: center;
+	position: relative;
+	padding: 15px 20px 60px;
+	display: inline-block;
+	vertical-align: top;
+	max-width: 310px;
+	height: 390px;
+	margin-left: 15px;
+	margin-right: 15px;
+	margin-top: 40px;
+}
+#merci .container-don .number p {
+	font-family: "Umbrage", serif;
+	font-size: 104px;
+	display: inline-block;
+	line-height: 1;
+}
+#merci .container-don .number p.euro {
+	font-size: 50px;
+	vertical-align: top;
+	margin-top: 10px;
+	margin-bottom: 0;
+}
+#merci .container-don .other p {
+	font-family: "Poppins", serif;
+	font-size: 16px;
+}
+#merci .container-don .other p.margin-38 {
+	margin-top: 38px;
+}
+#merci .container-don .other p.margin-60 {
+	margin-top: 60px;
+}
+#merci .container-don .other p.deduction {
+	font-family: "Poppins", serif;
+	font-size: 18px;
+	line-height: 1;
+}
+#merci .container-don .other p.deduction span {
+	font-family: "Poppins Bold", serif;
+	font-size: 48px;
+}
+#merci .container-don .other p.deduction span.small {
+	font-size: 28px;
+}
+#merci .container-don img {
+	position: absolute;
+	bottom: -20px;
+	right: 0;
+	left: 0;
+	margin: 0 auto;
+}
 
 .footer {
 	padding: 40px 10px;
@@ -438,6 +499,21 @@ footer .rs-footer p {
 	}
 	.container-form p.obligatoire, .container-form p.juridique, .container-form p.juridique a {
 		margin-left: 0 !important;
+	}
+	#title-question {
+		font-size: 26px;
+	}
+	#questionnaire {
+		padding: 10px;
+	}
+	#questionnaire .precision {
+		font-size: 13px;
+	}
+	#questionnaire .container-answer .row.in-small{
+		margin-top: 10px;
+	}
+	#questionnaire .container-answer a {
+		font-size: 35px;
 	}
 
 }
