--- a/nos-combats/assets/css/app.css
+++ b/nos-combats/assets/css/app.css
@@ -15,7 +15,7 @@
 
 #headerLarge .video {
     position: absolute;
-    top: 0;
+    top: -100px;
     left: 0;
     min-width: 100% !important;
     min-height: 100vh;
