--- a/liberezlapoule/assets/css/app.css
+++ b/liberezlapoule/assets/css/app.css
@@ -320,7 +320,7 @@ input:-moz-placeholder { /* Firefox 18- */
 	max-width: 100%;
 
 	position: absolute;
-	top: 58px;
+	top: 82px;
 	left: 82px;
 
 	display: none;
@@ -329,6 +329,7 @@ input:-moz-placeholder { /* Firefox 18- */
 	font-size: 50px;
 }
 #gauge {
+	visibility: hidden;
 	height: 100%;
 	width: 100%;
 }
