--- a/hc44Fs9SPqqfFW8b/assets/css/app.css
+++ b/hc44Fs9SPqqfFW8b/assets/css/app.css
@@ -300,7 +300,7 @@ body {
 .europe .text .right {
 	padding-left: 50px;
 }
-.europe .text .right p {
+.europe .text .right p,.europe .text .right a {
 	text-transform: uppercase;
 	font-family: 'Open Sans', serif;
 	font-size: 18px;
@@ -427,7 +427,7 @@ body {
 
 .depuis {
 	text-align: center;
-	margin-top: 70px;
+	margin-top: 50px;
 	padding-top: 30px;
 	padding-bottom: 30px;
 	border-top: 3px solid white;
@@ -481,7 +481,9 @@ body {
 
 
 .social .informer {
-	margin-top: 30px;
+	margin-top: 80px;
+	border-top: 3px solid white;
+	padding-top: 50px;
 }
 .social .informer p {
 	text-transform: uppercase;
@@ -493,6 +495,9 @@ body {
 	display: inline-block;
 	vertical-align: middle;
 	color: white;
+}
+.social .informer p span {
+	color: #96bf0d;
 }
 .social .informer a {
 	display: inline-block;
@@ -547,6 +552,7 @@ body {
 }
 .container-form {
 	position: fixed;
+	z-index: 999;
 	width: 300px;
 	max-width: 100%;
 
@@ -765,6 +771,46 @@ input[type=checkbox]:checked + label
 #merci .mosaic .box.last img {
 	margin: 10px;
 }
+
+
+.petition {
+	display: none;
+	width: 100%;
+	background-color: black;
+	z-index: 998;
+	position: fixed;
+	top: -1px;
+	left: -1px;
+}
+.petition > div {
+	padding: 35px;
+
+}
+.petition a {
+	position: absolute;
+	top: 10px;
+	right: 20px;
+	color: #ef9325;
+	font-family: 'Open Sans', serif;
+	font-weight: 700;
+	font-size: 35px;
+}
+.petition p {
+	font-family: 'Open Sans', serif;
+	font-weight: 400;
+	font-size: 20px;
+	color: white;
+	line-height: 1.2;
+}
+.petition p.title {
+	line-height: 1;
+
+
+	font-family: 'Young Frankenstein Rotalic', serif;
+	font-weight: 400;
+	font-size: 38px;
+	color:#ef9325;
+}
 @media screen and (max-width: 63.9376em) {
 
 	.europe .text .left {
@@ -785,6 +831,10 @@ input[type=checkbox]:checked + label
 		right: 5px;
 		width: 280px;
 	}
+
+	#merci {
+		padding-top: 100px;
+	}
 }
 @media screen and (max-width: 39.9375em) {
 	.remodal {
@@ -793,10 +843,13 @@ input[type=checkbox]:checked + label
 	.remodal-close {
 		top: -27px !important;
 	}
+	.bt-don {
+		top: 50px
+	}
 	.logo {
 		max-width: 80px;
 	}
-	.header {padding-top: 80px}
+	.header {padding-top: 120px}
 	.header .text h1 {
 		font-size: 36px;
 	}
@@ -857,7 +910,22 @@ input[type=checkbox]:checked + label
 		display: block;
 	}
 
-
+	.petition {
+		overflow-y: scroll;
+		height: 100vh;
+	}
+	.petition a {
+		position: fixed;
+		z-index: 999;
+		top: 10px;
+		right: 10px;
+	}
+	.petition p {
+		font-size: 16px;
+	}
+	.petition p.title {
+		font-size: 26px;
+	}
 
 
 	.social .informer p {
