--- a/couic2019/assets/css/app.css
+++ b/couic2019/assets/css/app.css
@@ -576,9 +576,19 @@ body {
 	text-transform: uppercase;
 	line-height: 1.2;
 }
-.container-form form {
+.container-form form > input {
+	margin-top: 10px;
 }
 .container-form form .hidden {
+	display: none;
+}
+.container-form .error {
+	color: red;
+	font-family: 'Open Sans', serif;
+	font-weight: 400;
+	font-size: 11px;
+	margin-bottom: 3px;
+	line-height: 1;
 	display: none;
 }
 .container-form form input {
@@ -587,6 +597,9 @@ body {
 	width: 100%;
 	border-radius: 20px;
 	font-family: 'Open Sans', serif;
+}
+.container-form form input.red-border {
+	border: 1px solid red;
 }
 .container-form form input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
 	color:    black;
